Wed Apr  3 09:57:47 CEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added SILC_PROTOCOLVERSION macro to check protocol version
	  of a socket connection.  The affected file is 
	  lib/silcutil/silcsockconn.h.

Tue Apr  2 14:55:06 CEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Some client implementations quit network by doing first LEAVE
	  and then immediately SIGNOFF (like Bombyx).  We now do check 
	  after a short time after LEAVE notify and check whether the 
	  client is still valid after LEAVE, and if not we remove it from 
	  cache.  Affected file is lib/silcclient/client_notify.c.

Tue Apr  2 13:39:04 CEST 2002  Johnny Mnemonic <johnny@themnemonic.org>

	* Merged version 1.1.4 of zlib. Even if it not currently in use,
	  it's good not to have security holes here.

	* Fixed a negative refcount situtuation for the config context.
	  Affected file is silcd/serverconfig.c.

Mon Apr  1 20:15:10 CEST 2002  Johnny Mnemonic <johnny@themnemonic.org>

	* ROBOdoc documented lib/silcutil/silcutil.h.

Sat Mar 30 21:06:45 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Optimized even more the SilcPacketContext structure.  Now
	  totally saved 16 bytes of memory per context after optimization.
	  Affected files are lib/silccore/silcpacket.[ch].

	* Made strict checks for valid SILC IDs.  Affected file is
	  lib/silccore/silcid.c.

Sat Mar 30 18:15:55 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Changed the object argument for silc_cipher_register,
	  silc_hash_register, silc_hmac_register and silc_pkcs_register
	  to const.  Affected files are lib/silccrypt/silccipher.[ch],
	  silchash.[ch], silchmac.[ch] and silcpkcs.[ch].

	* Changed the silc_get_username and silc_get_real_name to
	  never fail.  Affected file lib/silcutil/unix/silcunixutil.c.

	* Fixed the Irssi SILC Client to use the silc_get_username and
	  silc_get_real_name insted of glib routines since the glib
	  routines only corrupt stack.  Fixes the Irssi SILC to work in